--- a/app/index.html
+++ b/app/index.html
@@ -24,7 +24,8 @@
         <h3>sanji-time-ui config</h3>
       </div>
       <md-input-container>
-        <md-select ng-model="app.currentLang" ng-change="app.changeLang(app.currentLang)">
+        <md-select ng-model="app.currentLang"
+        ng-change="app.changeLang(app.currentLang)" aria-label="select language">
           <md-option ng-repeat="lang in app.langs" value="{{lang.key}}">
             {{lang.label}}
           </md-option>
