feat(component): add auth and response text

--- a/app/index.html
+++ b/app/index.html
@@ -35,7 +35,7 @@
 
     <div layout="row" layout-padding layout-align="center center">
       <div flex="33">
-        <sanji-time-window></sanji-time-window>
+        <sanji-time-window on-authorized="app.isAuthorized($event)"></sanji-time-window>
       </div>
     </div>
 
